--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="image-intro">
-                <img src="./assets/chef.png"
+                <img src="./assets/chef.png">
             </div>
 
 
