--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 
             
         </section>
+
+        <footer>
+            <div class="footer">
+                <p>Todos direitor reservados, receitas Foodfy.</p>
+            </div>
+        </footer>
        
 
     </body>
