--- a/index.html
+++ b/index.html
@@ -50,6 +50,60 @@
                 </div>
             </div>
 
+            <div class="card">
+                <div class="image-content">
+                    <img src="./assets/pizza.png" alt="Pizza 4 estações">
+                </div>
+
+                <div class="info-content">
+                    <h1>Pizza 4 estações</h1>
+                    <p>por Fabiana Melo</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="image-content">
+                    <img src="./assets/espaguete.png" alt="Espaguete ao alho">
+                </div>
+
+                <div class="info-content">
+                    <h1>Espaguete ao alho</h1>
+                    <p>por Júlia Kinoto</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="image-content">
+                    <img src="./assets/lasanha.png" alt="Lasanha mac n' cheese">
+                </div>
+
+                <div class="info-content">
+                    <h1>Lasanha mac n' cheese</h1>
+                    <p>por Juliano Vieira</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="image-content">
+                    <img src="./assets/doce.png" alt="Docinhos pão-do-céu">
+                </div>
+
+                <div class="info-content">
+                    <h1>Docinhos pão-do-céu</h1>
+                    <p>por Ricardo Golvea</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="image-content">
+                    <img src="./assets/asinhas.png" alt="Asinhas de frango ao barbecue">
+                </div>
+
+                <div class="info-content">
+                    <h1>Asinhas de frango ao barbecue</h1>
+                    <p>por Vania Steroski</p>
+                </div>
+            </div>
             
         </section>
 
