--- a/recipes.html
+++ b/recipes.html
@@ -14,7 +14,7 @@
             </a>
 
             <div class="header-links">
-                <a href="">Sobre</a>
+                <a href="about.html">Sobre</a>
                 <a href="recipes.html">Receitas</a>
             </div>
 
