--- a/recipes.html
+++ b/recipes.html
@@ -22,7 +22,7 @@
 
         <section id="recipe-cards">
             
-            <div class="card">
+            <div class="card" id="burger.png">
                 <div class="image-content">
                     <img src="./assets/burger.png" alt="Triplo bacon burguer">
                 </div>
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="pizza.png">
                 <div class="image-content">
                     <img src="./assets/pizza.png" alt="Pizza 4 estações">
                 </div>
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="espaguete.png">
                 <div class="image-content">
                     <img src="./assets/espaguete.png" alt="Espaguete ao alho">
                 </div>
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="lasanha.png">
                 <div class="image-content">
                     <img src="./assets/lasanha.png" alt="Lasanha mac n' cheese">
                 </div>
@@ -66,7 +66,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="doce.png">
                 <div class="image-content">
                     <img src="./assets/doce.png" alt="Docinhos pão-do-céu">
                 </div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="asinhas.png">
                 <div class="image-content">
                     <img src="./assets/asinhas.png" alt="Asinhas de frango ao barbecue">
                 </div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="burger.png">
                 <div class="image-content">
                     <img src="./assets/burger.png" alt="Triplo bacon burguer">
                 </div>
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="pizza.png">
                 <div class="image-content">
                     <img src="./assets/pizza.png" alt="Pizza 4 estações">
                 </div>
@@ -110,7 +110,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="espaguete.png">
                 <div class="image-content">
                     <img src="./assets/espaguete.png" alt="Espaguete ao alho">
                 </div>
@@ -121,7 +121,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="lasanha.png">
                 <div class="image-content">
                     <img src="./assets/lasanha.png" alt="Lasanha mac n' cheese">
                 </div>
@@ -132,7 +132,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="doce.png">
                 <div class="image-content">
                     <img src="./assets/doce.png" alt="Docinhos pão-do-céu">
                 </div>
@@ -143,7 +143,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="asinhas.png">
                 <div class="image-content">
                     <img src="./assets/asinhas.png" alt="Asinhas de frango ao barbecue">
                 </div>
@@ -165,7 +165,7 @@
         <div class="modal-overlay">
             <div class="modal">
                 <div class="image-modal">
-                    <iframe src="./assets/asinhas.png" frameborder="0" scrolling="NO"></iframe>
+                    <iframe src="" frameborder="0" scrolling="NO"></iframe>
                 </div>
                 <div class="info-modal">
                     <h1>Asinhas de frango ao barbecue</h1>
@@ -176,6 +176,8 @@
                 </div>
             </div>
         </div>
+
+        <script src="scripts.js"></script>
        
 
     </body>
