update before back-end

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
         <footer>
             <div class="footer">
-                <p>Todos direitor reservados, receitas Foodfy.</p>
+                <p>Todos direitos reservados, receitas Foodfy.</p>
             </div>
         </footer>
        
