--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <section id="recipe-cards">
             
-            <div class="card">
+            <div class="card"  id="burger.png">
                 <div class="image-content">
                     <img src="./assets/burger.png" alt="Triplo bacon burguer">
                 </div>
@@ -50,7 +50,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="pizza.png">
                 <div class="image-content">
                     <img src="./assets/pizza.png" alt="Pizza 4 estações">
                 </div>
@@ -61,7 +61,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="espaguete.png">
                 <div class="image-content">
                     <img src="./assets/espaguete.png" alt="Espaguete ao alho">
                 </div>
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="lasanha.png">
                 <div class="image-content">
                     <img src="./assets/lasanha.png" alt="Lasanha mac n' cheese">
                 </div>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="doce.png">
                 <div class="image-content">
                     <img src="./assets/doce.png" alt="Docinhos pão-do-céu">
                 </div>
@@ -94,7 +94,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="asinhas.png">
                 <div class="image-content">
                     <img src="./assets/asinhas.png" alt="Asinhas de frango ao barbecue">
                 </div>
@@ -109,9 +109,26 @@
 
         <footer>
             <div class="footer">
-                <p>Todos direitor reservados, receitas Foodfy.</p>
+                <p>Todos direitos reservados, receitas Foodfy.</p>
             </div>
         </footer>
+
+        <div class="modal-overlay">
+            <div class="modal">
+                <div class="image-modal">
+                    <iframe src="" frameborder="0" scrolling="NO"></iframe>
+                </div>
+                <div class="info-modal">
+                    <h1>Asinhas de frango ao barbecue</h1>
+                    <h2>por Vania Steroski</h2>
+                </div>
+                <div class="close-modal">
+                    <a>Fechar modal</a>
+                </div>
+            </div>
+        </div>
+
+        <script src="scripts.js"></script>
        
 
     </body>
